Add exceptions to fix xref on travis
On travis, though not locally, these functions are causing `make xref`
to fail.

It might be possible to revert this commit on a different CI.

--- a/rebar.config
+++ b/rebar.config
@@ -31,6 +31,8 @@
       - (\"diameter_dict_util\":\"format_error\"/\"1\")
       - (\"diameter_dict_util\":\"parse\"/\"2\")
       - (\"erlang\":\"timestamp\"/\"0\")
+      - (\"rebar_shell\":\"shell\"/\"2\")
+      - (\"error_logger\":\"swap_handler\"/\"1\")
       - (\"rebar_rnd\":\"seed\"/\"1\")
       - (\"rebar_rnd\":\"uniform\"/\"0\"))",
          []}]}.
